--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/vldmr42/LearnJS#readme",
   "dependencies": {
     "@types/faker": "^5.5.9",
+    "@types/google.maps": "^3.47.4",
     "axios": "^0.25.0",
     "faker": "^5.5.3",
     "parcel-bundler": "^1.12.5",
