Sorter and NumberCollection classes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "## Learned: 1. Basics - Variables - Data types - User input - Operators - Git - Conditions - Cycles - Functions - Callback Functions - Objects - Massives and pseudoMassives - Breakpoints - Dom structure - Events 2. JS in work - Time interval - Document parameters - Classes and constructors - This - ES6 syntax (interpolation, let, const, arrow functions, default parameters, classes, spread) 3. Advanced JS - Local servers - JSON - AJAX - Promise - Http requests - Local storage - Error handling - jQuery - Incapsulation - Modules - Webpack adjustment and project construction - Babel - Work with libs 4. Other techs - React - Tests 5. React basics - ESLint - React start - Module structure - Attributes and states of components - Adding styles - Forms in react 6. React middle - Fetch API - API. Work with server - Components lifecycle - React patterns - Navigation - Default properties - Higher components - Hooks 7. React + redux - Main principles - Figma - Connect React and Redux - React context - React + redux application - json server - React - redux events - Testing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sort:build": "(cd \"TS\\TS Complete Guide\\More On Design Patterns\\sort\" && npx tsc -w)",
+    "sort:run": "(cd \"TS\\TS Complete Guide\\More On Design Patterns\\sort\" && npx nodemon build/index.js)",
+    "sort_start": "npx concurrently npm:sort:*"
   },
   "repository": {
     "type": "git",
@@ -21,7 +24,9 @@
     "@types/faker": "^5.5.9",
     "@types/google.maps": "^3.47.4",
     "axios": "^0.25.0",
+    "concurrently": "^7.0.0",
     "faker": "^5.5.3",
+    "nodemon": "^2.0.15",
     "parcel-bundler": "^1.12.5",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
