--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sort:build": "(cd \"TS\\TS Complete Guide\\More On Design Patterns\\sort\" && npx tsc -w)",
     "sort:run": "(cd \"TS\\TS Complete Guide\\More On Design Patterns\\sort\" && npx nodemon build/index.js)",
-    "sort_start": "npx concurrently npm:sort:*"
+    "sort_start": "npx concurrently npm:sort:*",
+    "stat:build": "(cd \"TS\\TS Complete Guide\\Reusable Code\\stats\" && npx tsc -w)",
+    "stat:run": "(cd \"TS\\TS Complete Guide\\Reusable Code\\stats\" && npx nodemon build/index.js)",
+    "stat_start": "npx concurrently npm:stat:*"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,7 @@
   "dependencies": {
     "@types/faker": "^5.5.9",
     "@types/google.maps": "^3.47.4",
+    "@types/node": "^17.0.18",
     "axios": "^0.25.0",
     "concurrently": "^7.0.0",
     "faker": "^5.5.3",
