--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "sort_start": "npx concurrently npm:sort:*",
     "stat:build": "(cd \"TS\\TS Complete Guide\\Reusable Code\\stats\" && npx tsc -w)",
     "stat:run": "(cd \"TS\\TS Complete Guide\\Reusable Code\\stats\" && npx nodemon build/index.js)",
-    "stat_start": "npx concurrently npm:stat:*"
+    "stat_start": "npx concurrently npm:stat:*",
+    "web_start": "(cd \"TS\\TS Complete Guide\\Web\" && npx parcel index.html)",
+    "web_server": "json-server -w \"TS\\TS Complete Guide\\Web\\db.json\""
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,7 @@
     "axios": "^0.25.0",
     "concurrently": "^7.0.0",
     "faker": "^5.5.3",
+    "json-server": "^0.17.0",
     "nodemon": "^2.0.15",
     "parcel-bundler": "^1.12.5",
     "ts-node": "^10.5.0",
