--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "stat:run": "(cd \"TS\\TS Complete Guide\\Reusable Code\\stats\" && npx nodemon build/index.js)",
     "stat_start": "npx concurrently npm:stat:*",
     "web_start": "(cd \"TS\\TS Complete Guide\\Web\" && npx parcel index.html)",
-    "web_server": "json-server -w \"TS\\TS Complete Guide\\Web\\db.json\""
+    "web_server": "json-server -w \"TS\\TS Complete Guide\\Web\\db.json\"",
+    "exp:build": "(cd \"TS/TS Complete Guide/Express\" && tsc -w)",
+    "exp:run": "(cd \"TS/TS Complete Guide/Express/build\" && nodemon index.js)",
+    "exp_start": "concurrently npm:exp:*"
   },
   "repository": {
     "type": "git",
@@ -26,11 +29,17 @@
   },
   "homepage": "https://github.com/vldmr42/LearnJS#readme",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/google.maps": "^3.47.4",
     "@types/node": "^17.0.18",
     "axios": "^0.25.0",
+    "body-parser": "^1.19.2",
     "concurrently": "^7.0.0",
+    "cookie-session": "^2.0.0",
+    "express": "^4.17.3",
     "faker": "^5.5.3",
     "json-server": "^0.17.0",
     "nodemon": "^2.0.15",
